# RONN

./: .gitignore  CHANGELOG.md  COMPLETED_IMPROVEMENTS.md  Cargo.toml  FINAL_STATUS.md  GPU_AND_OPERATOR_IMPROVEMENTS.md  IMPROVEMENT_ROADMAP.md  PRODUCTION_READINESS.md  README.md  TASKS.md  TESTING_WITHOUT_MODELS.md  TEST_COVERAGE_REPORT.md  WORK_COMPLETED_SUMMARY.md  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  ci.yml  integration-tests.yml
benches/: core_operations.rs  end_to_end.rs  end_to_end_simple.rs
benches/comparative_impl/: vs_onnx_runtime.rs
benches/integration/: multi_provider.rs  optimization_impact.rs
crates/ronn-api/: Cargo.toml
crates/ronn-api/src/: async_session.rs  batch.rs  lib.rs  session.rs
crates/ronn-core/: Cargo.toml
crates/ronn-core/benches/: tensor_benchmarks.rs
crates/ronn-core/src/: graph.rs  lib.rs  logging.rs  memory_pool.rs  profiling.rs  session.rs  simd.rs  tensor.rs
crates/ronn-core/src/ops/: arithmetic.rs  matrix.rs  reduction.rs  shape.rs
crates/ronn-core/tests/: property_tests.rs  tensor_shape_tests.rs
crates/ronn-graph/: Cargo.toml
crates/ronn-graph/benches/: optimization_benchmark.rs
crates/ronn-graph/src/: optimizer.rs
crates/ronn-graph/src/passes/: constant_folding.rs  fusion.rs  layout.rs  mod.rs  sparsity.rs
crates/ronn-graph/tests/: test_optimizer.rs
crates/ronn-graph/tests/common/: mod.rs
crates/ronn-learning/: Cargo.toml
crates/ronn-learning/src/: ewc.rs  replay.rs  timescales.rs
crates/ronn-learning/tests/: ewc_tests.rs  mod.rs  replay_tests.rs  timescales_tests.rs
crates/ronn-onnx/: Cargo.toml  build.rs
crates/ronn-onnx/src/: loader.rs  types.rs
crates/ronn-onnx/src/ops/: activations.rs  math.rs  mod.rs  neural_network.rs  tensor_ops.rs
crates/ronn-onnx/tests/: test_activations.rs  test_loader.rs  test_math.rs  test_neural_network.rs  test_parser_robustness.rs  test_tensor_ops.rs
crates/ronn-providers/: Cargo.toml
crates/ronn-providers/benches/: multi_gpu_benchmarks.rs
crates/ronn-providers/src/: allocator.rs  compiler.rs  lib.rs  registry.rs  sparse.rs
crates/ronn-providers/src/bitnet/: allocator.rs  kernels.rs  mod.rs  provider.rs  quantization.rs
crates/ronn-providers/src/cpu/: allocator.rs  kernels.rs  mod.rs  provider.rs  simd.rs
crates/ronn-providers/src/custom/: example_npu.rs  example_tpu.rs  mod.rs  registry.rs
crates/ronn-providers/src/gpu/: allocator.rs  cuda_kernels.rs  memory_manager.rs  mod.rs  provider.rs  topology.rs
crates/ronn-providers/src/wasm/: allocator.rs  bridge.rs  kernels.rs  mod.rs  provider.rs
crates/ronn-providers/tests/: basic_tests.rs  cpu_provider_tests.rs  edge_case_tests.rs  integration_tests.rs  memory_management_tests.rs  performance_comparison_tests.rs  provider_framework_tests.rs  specialized_provider_tests.rs
crates/ronn-python/: Cargo.toml  README.md  pyproject.toml
crates/ronn-python/src/: error.rs  lib.rs  model.rs  session.rs  tensor.rs
crates/ronn-sparsity/: Cargo.toml
crates/ronn-sparsity/src/: classifier.rs  error.rs  formats.rs  lib.rs  metrics.rs  predictor.rs  profiler.rs  scheduler.rs  sparse_ops.rs
docs/: logging_guide.md  rust_ml_architecture.md
engine/: GAPS.md  README.md
engine/crates/nnx-core/: Cargo.toml
engine/crates/nnx-core/src/: backend.rs  device.rs  dtype.rs  engine.rs  error.rs  gpu_config.rs  lib.rs  shape.rs  tensor.rs
engine/crates/nnx-core/tests/: property.rs
engine/crates/nnx-cubecl/: Cargo.toml
engine/crates/nnx-cubecl/src/: activation_quant.rs  activations.rs  attention.rs  backend.rs  inference.rs  lib.rs  matmul.rs  normalization.rs  paged_kv.rs  quantized.rs  rope.rs  softmax.rs
engine/crates/nnx-cubecl/tests/: activation_quant_test.rs  backend_test.rs  gpu_correctness.rs  gpu_edge_cases.rs  gpu_vs_cpu_test.rs  paged_kv_test.rs  quantized_gpu_test.rs
engine/crates/nnx-ggml/: Cargo.toml
engine/crates/nnx-ggml/src/: lib.rs  loader.rs
engine/crates/nnx-ggml/tests/: property.rs
engine/crates/nnx-gguf/: Cargo.toml
engine/crates/nnx-gguf/src/: lib.rs  metadata.rs  parser.rs  types.rs  writer.rs
engine/crates/nnx-gguf/tests/: property.rs
engine/crates/nnx-kernels/: Cargo.toml
engine/crates/nnx-kernels/src/: activations.rs  attention.rs  audio.rs  comparison.rs  conv.rs  cpu_backend.rs  einsum.rs  elementwise.rs  lib.rs  masking.rs  matmul.rs  normalization.rs  pooling.rs  reduction.rs  rms_norm.rs  rope.rs  shape_ops.rs  softmax.rs  ssm.rs  tensor_creation.rs  upsample.rs
engine/crates/nnx-kernels/tests/: property.rs
engine/crates/nnx-onnx/: Cargo.toml  build.rs
engine/crates/nnx-onnx/src/: error.rs  lib.rs  loader.rs  proto.rs
engine/crates/nnx-onnx/tests/: loader.rs  property.rs
engine/crates/nnx-quant/: Cargo.toml
engine/crates/nnx-quant/src/: blocks.rs  dequant.rs  encode.rs  lib.rs  types.rs
engine/crates/nnx-quant/tests/: property.proptest-regressions  property.rs
engine/crates/nnx-quantize-model/: Cargo.toml
engine/crates/nnx-quantize-model/src/: main.rs
engine/crates/nnx-safetensors/: Cargo.toml
engine/crates/nnx-safetensors/src/: lib.rs  loader.rs
engine/crates/nnx-safetensors/tests/: property.rs
engine/crates/nnx-serving/: Cargo.toml
engine/crates/nnx-serving-async/: Cargo.toml
engine/crates/nnx-serving-async/src/: engine.rs  lib.rs  stream.rs
engine/crates/nnx-serving-async/tests/: streaming.rs
engine/crates/nnx-serving/src/: backend.rs  block_manager.rs  config.rs  error.rs  lib.rs  page.rs  paged_cache.rs  prefix_cache.rs  scheduler.rs  sequence.rs
engine/crates/nnx-serving/tests/: edge_cases.rs  paged_cache_test.rs  property.rs  serving_loop_test.rs
engine/crates/nnx-transformer/: Cargo.toml
engine/crates/nnx-transformer/src/: attention.rs  backend.rs  block.rs  cache.rs  config.rs  ffn.rs  generate.rs  gpu.rs  lib.rs  loader.rs  model.rs  quant_utils.rs  sampler.rs  tokenizer.rs  weight_names.rs  weights.rs
engine/crates/nnx-transformer/tests/: README.md  integration.rs
models/: create_test_models.py  export_distilbert.py  export_gpt2.py
tests/: e2e_workflows.rs
(+33 files in other folders)
