[workspace]
members = [
    "crates/ronn-core",
    "crates/ronn-providers",
    "crates/ronn-graph",
    "crates/ronn-hrm",
    "crates/ronn-memory",
    "crates/ronn-learning",
    "crates/ronn-onnx",
    "crates/ronn-api",
    "crates/ronn-python",
    "crates/ronn-sparsity",
    "examples/*",
    "tests/integration",
]
exclude = ["examples/models"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Brock Claussen"]
license = "MIT"
repository = "https://github.com/Narcoleptic-Fox/RONN"
homepage = "https://github.com/Narcoleptic-Fox/RONN"
documentation = "https://docs.rs/ronn"
keywords = ["ml", "inference", "onnx", "brain-inspired", "runtime"]
categories = ["science", "algorithms", "wasm"]
rust-version = "1.90.0"

[workspace.dependencies]
# Core tensor operations and GPU acceleration
candle-core = { version = "0.9", default-features = false }
candle-nn = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }

# Async runtime and concurrency
tokio = { version = "1.35", features = ["full"] }
rayon = "1.7"
dashmap = "5.5"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
safetensors = "0.4"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
half = "2.6"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Memory and performance
hnsw = "0.11"
memmap2 = "0.9"
once_cell = "1.19"

# Async and networking
reqwest = { version = "0.11", features = ["json"] }

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

# CPU feature detection and SIMD
cpufeatures = "0.2"
wide = "0.7"

# Memory alignment (using libc for alignment functions)
libc = "0.2"

# BitNet support
bitpacking = "0.8"

# WebAssembly support
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Custom hardware provider support
dlopen2 = "0.7"
libloading = "0.8"

# Python bindings
pyo3 = "0.20"
numpy = "0.20"

[workspace.lints.rust]
# Allow missing_docs for now - codebase is in active development
missing_docs = "allow"
unused_imports = "allow"
unused_mut = "warn"
# Allow some warnings for now
unused_unsafe = "allow"
private_interfaces = "allow"
dead_code = "allow"
unused_variables = "allow"
# Allow useless comparisons in tests (e.g., assert!(x >= 0) for usize)
unused_comparisons = "allow"
# Renamed from clippy::for_loops_over_fallibles in Rust 2024
for_loops_over_fallibles = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Allow all-caps acronyms like CPU, GPU (stylistic preference)
upper_case_acronyms = "allow"
# Allow some stylistic lints that are too noisy for now
collapsible_if = "allow"
type_complexity = "allow"
field_reassign_with_default = "allow"
needless_question_mark = "allow"
or_fun_call = "allow"
# Additional allows for ML/inference codebase patterns
map_entry = "allow"
should_implement_trait = "allow"
trivially_copy_pass_by_ref = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
approx_constant = "allow"
derivable_impls = "allow"
redundant_closure = "allow"
unnecessary_wraps = "allow"
wrong_self_convention = "allow"
unwrap_or_default = "allow"
# More allows for common patterns
clone_on_ref_ptr = "allow"
cloned_ref_to_slice_refs = "allow"
get_first = "allow"
# Allow comparisons that are always true/false for test assertions
absurd_extreme_comparisons = "allow"
comparison_to_empty = "allow"
useless_vec = "allow"
len_zero = "allow"
too_many_arguments = "allow"
map_clone = "allow"
for_kv_map = "allow"
unnecessary_cast = "allow"
iter_kv_map = "allow"
manual_range_contains = "allow"
let_and_return = "allow"
new_without_default = "allow"
wildcard_imports = "allow"
assertions_on_constants = "allow"
enum_variant_names = "allow"
# Format and lint patterns
format_in_format_args = "allow"
expect_fun_call = "allow"
identity_op = "allow"

# Root-level package for benchmarks
[package]
name = "ronn-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Workspace crates
ronn-api = { path = "crates/ronn-api" }
ronn-core = { path = "crates/ronn-core" }
ronn-graph = { path = "crates/ronn-graph" }
ronn-providers = { path = "crates/ronn-providers" }
ronn-onnx = { path = "crates/ronn-onnx" }
ronn-hrm = { path = "crates/ronn-hrm" }
ronn-sparsity = { path = "crates/ronn-sparsity" }

# Benchmarking
criterion = { workspace = true }

# Optional comparative dependencies
onnxruntime = { version = "0.0.14", optional = true }
ndarray = { version = "0.15", optional = true }

# Async runtime
tokio = { workspace = true }

# Utilities
futures = "0.3"

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
# Enable comparative benchmarks against ONNX Runtime
comparative = ["onnxruntime", "ndarray"]

# Benchmark definitions
[[bench]]
name = "core_operations"
harness = false

[[bench]]
name = "end_to_end_simple"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "comparative"
harness = false
required-features = ["comparative"]

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "regression"
harness = false

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
# Maximum optimization for production builds
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
# Optimized for benchmarking
inherits = "release"
debug = true

[profile.test]
# Fast tests with minimal optimization
opt-level = 1
