[package]
name = "ronn-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-core = { version = "0.1.0", path = "../ronn-core" }
ronn-providers = { version = "0.1.0", path = "../ronn-providers" }
ronn-graph = { version = "0.1.0", path = "../ronn-graph" }
ronn-onnx = { version = "0.1.0", path = "../ronn-onnx" }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Data structures
dashmap = { workspace = true }

[lints]
workspace = true
