[package]
name = "ronn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core runtime engine for RONN - fundamental tensor operations, data types, and session management"

[dependencies]
# Core tensor operations
candle-core.workspace = true
candle-nn.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Half precision support
half.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Concurrency
dashmap.workspace = true
tokio.workspace = true

# Memory management
once_cell.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
futures = "0.3"

[[bench]]
name = "tensor_benchmarks"
harness = false

[features]
default = []
gpu = ["candle-core/cuda"]

[lints]
workspace = true
