[package]
description = "Graph optimization and execution planning for RONN neural network runtime"
name = "ronn-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-core = { version = "0.1.0", path = "../ronn-core" }

# Data structures
dashmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization (for pass configuration)
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimization_benchmark"
harness = false

[lints]
workspace = true
