[package]
description = "ONNX model parsing and compatibility layer for RONN runtime"
name = "ronn-onnx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-core = { version = "0.1.0", path = "../ronn-core" }

# ONNX protobuf support
prost = { workspace = true }
prost-types = "0.13"
bytes = "1.9"

# Serialization (keeping for backward compatibility)
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[lints]
workspace = true
