[package]
name = "ronn-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Execution provider framework for RONN - hardware abstraction layer"

[dependencies]
ronn-core = { version = "0.1.0", path = "../ronn-core" }

# Core tensor operations
candle-core.workspace = true
candle-nn.workspace = true

# Parallel processing
rayon.workspace = true
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Random number generation
fastrand = "2.0"

# Concurrency
dashmap.workspace = true

# CPU features and SIMD
cpufeatures.workspace = true
wide.workspace = true

# Memory alignment
libc.workspace = true

# CPU detection
num_cpus = "1.16"

# BitNet support (optional)
bitpacking = { workspace = true, optional = true }

# WebAssembly support (optional)
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

# Custom hardware support (optional)
dlopen2 = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
futures = "0.3"

[features]
default = ["cpu"]
cpu = []
gpu = ["candle-core/cuda"]
bitnet = ["bitpacking"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "getrandom"]
custom-hardware = ["dlopen2", "libloading"]
webasm = []

# Benchmark configuration
[[bench]]
name = "multi_gpu_benchmarks"
harness = false

[lints]
workspace = true
