[package]
name = "ronn-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Python bindings for RONN - enables Python ML workflows with RONN runtime"

[lib]
name = "ronn"
crate-type = ["cdylib"]

[dependencies]
ronn-api = { path = "../ronn-api" }
ronn-core = { path = "../ronn-core" }
ronn-graph = { path = "../ronn-graph" }
ronn-providers = { path = "../ronn-providers" }

# PyO3 for Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
numpy = "0.20"

# Async support
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
gpu = ["ronn-core/gpu"]
