[package]
description = "PowerInfer-style activation sparsity optimization for RONN neural network runtime"
name = "ronn-sparsity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
ronn-core = { version = "0.1.0", path = "../ronn-core" }

# Tensor operations
candle-core.workspace = true
candle-nn.workspace = true

# Async runtime and concurrency
tokio.workspace = true
rayon.workspace = true
dashmap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Random number generation
fastrand = "2.0"

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[features]
default = ["sparsity"]
sparsity = []

[lints]
workspace = true
