[package]
name = "nnx-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for the NNX inference engine"

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
half.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
