[package]
name = "nnx-gguf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GGUF file format parser for NNX"

[dependencies]
nnx-core = { path = "../nnx-core" }
nnx-quant = { path = "../nnx-quant" }
memmap2.workspace = true
half.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
