[package]
name = "nnx-onnx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ONNX model loading for NNX"

[dependencies]
nnx-core = { path = "../nnx-core" }
prost.workspace = true
memmap2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
