[package]
name = "nnx-onnx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ONNX model loading for NNX"

[dependencies]
nnx-core = { path = "../nnx-core" }
nnx-transformer = { path = "../nnx-transformer" }
prost.workspace = true
half.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
