[package]
name = "nnx-quant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Quantization formats, matrix encoders, and dequantization kernels for NNX"

[dependencies]
nnx-core = { path = "../nnx-core" }
half.workspace = true
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "dequant"
harness = false

[lints]
workspace = true
