[package]
name = "nnx-safetensors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SafeTensors weight loading for NNX"

[dependencies]
nnx-core = { path = "../nnx-core" }
safetensors.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
