[package]
name = "nnx-serving-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Async token-streaming wrapper over the synchronous NNX serving engine"

[dependencies]
nnx-core = { path = "../nnx-core" }
nnx-serving = { path = "../nnx-serving" }
nnx-transformer = { path = "../nnx-transformer" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
