[package]
name = "nnx-serving"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Serving infrastructure for NNX: paged attention, continuous batching, prefix caching"

[dependencies]
nnx-core = { path = "../nnx-core" }
nnx-kernels = { path = "../nnx-kernels" }
nnx-transformer = { path = "../nnx-transformer" }
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
nnx-transformer = { path = "../nnx-transformer" }
nnx-quant = { path = "../nnx-quant" }

[lints]
workspace = true
