[package]
name = "nnx-transformer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Transformer model architecture for NNX"

[dependencies]
nnx-core = { path = "../nnx-core" }
nnx-quant = { path = "../nnx-quant" }
nnx-gguf = { path = "../nnx-gguf" }
nnx-safetensors = { path = "../nnx-safetensors" }
nnx-kernels = { path = "../nnx-kernels" }
nnx-cubecl = { path = "../nnx-cubecl", optional = true }
half.workspace = true
rayon.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []
gpu = ["nnx-cubecl", "nnx-cubecl/wgpu"]

[lints]
workspace = true
